create mail apis

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,8 @@
 DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASSWORD= 1234
-DB_NAME=saara_sips_bites
+DB_NAME=SAARA_CAFE
 DB_PORT=3306
 PORT=8080
+EMAIL=saarascafe@gmail.com
+EMAIL_PASS=becg qtzb lsbi ehaw
